Doctor clean